Added some new stuff, cleaned up some stuff, among some other things, gonna make this a new release after i get home.